maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:80: error: identifier expected but 'if' found.
	if (!estFaceMur) {
        ^